reorganize and try fixing timeline table

--- a/instructor_setup_AnVIL.Rmd
+++ b/instructor_setup_AnVIL.Rmd
@@ -1,5 +1,9 @@
 # Setup on AnVIL
 
+## AnVIL Instructor guide
+
+If this is your first time using AnVIL (or first time using it for a course), we recommend checking out the [AnVIL Instructor Guide](https://jhudatascience.org/AnVIL_Book_Instructor_Guide).  Several of the instructions below link out to the Instructor Guide for details.
+
 ## Suggested Timeline
 
 
@@ -19,14 +23,14 @@ timeline <- tibble::tribble(
                         "    - Use `dplyr` commands, such as `dplyr::filter()`",
                         sep="\n"),
   "**~1 week before**",   paste(
-                        "1. **Collect student usernames**",
-                        "1. **Add students to class group**",
+                        "1. **Set up billing**",
+                        "1. **Set up billing**",
                         sep="\n")
 )
 knitr::kable(timeline, col.names = NULL, format = "html")
 ```
 
-## What is AnVIL?
+## About AnVIL
 
 The [AnVIL (Analysis Visualization and Informatics Lab-space) platform](https://anvilproject.org/) is a cloud computing platform specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
 
@@ -40,12 +44,7 @@ The [AnVIL (Analysis Visualization and Informatics Lab-space) platform](https://
 - AnVIL and Terra provide their services for free (managing software, data, and users).  You just need to pay Google for the computational resources that you use.
 :::
 
-## Why use AnVIL in your classroom?
-
-## AnVIL Instructor guide
-
-If this is your first time using AnVIL (or first time using it for a course), we recommend checking out the [AnVIL Instructor Guide](https://jhudatascience.org/AnVIL_Book_Instructor_Guide).  Several of the instructions below link out to the Instructor Guide for details.
-
+### Why use AnVIL in your classroom?
 
 ## Class Setup
 
