update dslabs link

--- a/dataset-us_contagious_diseases.Rmd
+++ b/dataset-us_contagious_diseases.Rmd
@@ -6,7 +6,7 @@ install.packages("dslabs")
 
 Now we will use your R skills to explore the [*US Contagious Diseases*](https://www.rdocumentation.org/packages/dslabs/versions/0.7.3/topics/us_contagious_diseases){target="_blank"} dataset.
 
-This dataset is part of [`dslabs`](https://www.rdocumentation.org/packages/dslabs/versions/0.7.3), a collection of datasets for practicing data analysis assembled by Rafael Irizarry and Amy Gill.  You can use the help function (`?us_contagious_diseases`) in RStudio to find out more about this dataset.
+This dataset is part of [`dslabs`](https://CRAN.R-project.org/package=dslabs), a collection of datasets for practicing data analysis assembled by Rafael Irizarry and Amy Gill.  You can use the help function (`?us_contagious_diseases`) in RStudio to find out more about this dataset.
 
 ## R tips
 
